--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style/animations.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./scripts/animations.js" defer></script>
+    <script src="./scripts/slideshow.js" defer></script>
   </head>
   <body class="bg-slate-50 text-slate-900 font-sans antialiased">
     <!-- Floating Navigation -->
@@ -811,21 +812,44 @@
           <div
             class="group bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all transform hover:-translate-y-1 stagger-card tilt-card"
           >
-            <div class="h-48 bg-gradient-to-br from-indigo-500 to-violet-500">
-              <div class="project-icon-wrapper">
-                <svg
-                  class="w-16 h-16 text-white"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
+            <div class="relative h-48">
+              <div
+                class="slideshow-container cursor-pointer"
+                data-project="mru-chemistry"
+              >
+                <img
+                  src="./res/mruchemistrywebsite1.png"
+                  class="slide active w-full h-48 object-cover"
+                />
+                <img
+                  src="./res/mruchemistrywebsite2.png"
+                  class="slide w-full h-48 object-cover"
+                />
+                <img
+                  src="./res/mruchemistrywebsite3.png"
+                  class="slide w-full h-48 object-cover"
+                />
+                <img
+                  src="./res/mruchemistrywebsite4.png"
+                  class="slide w-full h-48 object-cover"
+                />
+                <!-- Navigation dots -->
+                <div
+                  class="absolute bottom-2 left-1/2 transform -translate-x-1/2 flex space-x-2 z-10"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z"
-                  ></path>
-                </svg>
+                  <button
+                    class="w-2 h-2 rounded-full bg-white opacity-50 hover:opacity-100"
+                  ></button>
+                  <button
+                    class="w-2 h-2 rounded-full bg-white opacity-50 hover:opacity-100"
+                  ></button>
+                  <button
+                    class="w-2 h-2 rounded-full bg-white opacity-50 hover:opacity-100"
+                  ></button>
+                  <button
+                    class="w-2 h-2 rounded-full bg-white opacity-50 hover:opacity-100"
+                  ></button>
+                </div>
               </div>
             </div>
             <div class="p-6">
@@ -876,10 +900,10 @@
               </div>
             </div>
             <div class="p-6">
-              <h3 class="text-xl font-bold mb-2">Crypto Trading Platform</h3>
-              <p class="text-slate-600 mb-4">
-                Next.js application with Supabase integration
-              </p>
+              <h3 class="text-xl font-bold mb-2">
+                Crypto Pricing View Platform
+              </h3>
+              <p class="text-slate-600 mb-4">Next.js application</p>
               <div class="flex flex-wrap gap-2">
                 <span
                   class="px-3 py-1 bg-indigo-100 text-indigo-600 rounded-full text-sm"
@@ -904,21 +928,37 @@
           <div
             class="group bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all transform hover:-translate-y-1 stagger-card tilt-card"
           >
-            <div class="h-48 bg-gradient-to-br from-indigo-500 to-violet-500">
-              <div class="project-icon-wrapper">
-                <svg
-                  class="w-16 h-16 text-white"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
+            <div class="relative h-48">
+              <div
+                class="slideshow-container cursor-pointer"
+                data-project="cookie-manager"
+              >
+                <img
+                  src="./res/cookieOne.png"
+                  class="slide active w-full h-48 object-cover"
+                />
+                <img
+                  src="./res/cookieTwo.png"
+                  class="slide w-full h-48 object-cover"
+                />
+                <img
+                  src="./res/cookieThree.png"
+                  class="slide w-full h-48 object-cover"
+                />
+                <!-- Navigation dots -->
+                <div
+                  class="absolute bottom-2 left-1/2 transform -translate-x-1/2 flex space-x-2 z-10"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
-                  />
-                </svg>
+                  <button
+                    class="w-2 h-2 rounded-full bg-white opacity-50 hover:opacity-100"
+                  ></button>
+                  <button
+                    class="w-2 h-2 rounded-full bg-white opacity-50 hover:opacity-100"
+                  ></button>
+                  <button
+                    class="w-2 h-2 rounded-full bg-white opacity-50 hover:opacity-100"
+                  ></button>
+                </div>
               </div>
             </div>
             <div class="p-6">
@@ -991,6 +1031,51 @@
                 <span
                   class="px-3 py-1 bg-indigo-100 text-indigo-600 rounded-full text-sm"
                   >REST API</span
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- NovaPro Inventory System Project Card -->
+          <div
+            class="group bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all transform hover:-translate-y-1 stagger-card tilt-card"
+          >
+            <div class="relative h-48">
+              <img
+                src="./res/novaprolanding.png"
+                alt="NovaPro Inventory System"
+                class="w-full h-full object-cover"
+              />
+              <div
+                class="absolute inset-0 bg-gradient-to-b from-transparent to-black/50"
+              ></div>
+            </div>
+            <div class="p-6">
+              <h3 class="text-xl font-bold mb-2">NovaPro Inventory System</h3>
+              <p class="text-slate-600 mb-4">
+                Full-stack inventory management system with material
+                calculations and automated backups
+              </p>
+              <div class="flex flex-wrap gap-2">
+                <span
+                  class="px-3 py-1 bg-indigo-100 text-indigo-600 rounded-full text-sm"
+                  >PHP</span
+                >
+                <span
+                  class="px-3 py-1 bg-indigo-100 text-indigo-600 rounded-full text-sm"
+                  >MariaDB</span
+                >
+                <span
+                  class="px-3 py-1 bg-indigo-100 text-indigo-600 rounded-full text-sm"
+                  >JavaScript</span
+                >
+                <span
+                  class="px-3 py-1 bg-indigo-100 text-indigo-600 rounded-full text-sm"
+                  >Fedora Linux</span
+                >
+                <span
+                  class="px-3 py-1 bg-indigo-100 text-indigo-600 rounded-full text-sm"
+                  >LAMP Stack</span
                 >
               </div>
             </div>
