Implement slideshow modal with navigation; enhance modal styling and transitions

--- a/index.html
+++ b/index.html
@@ -1041,14 +1041,19 @@
             class="group bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all transform hover:-translate-y-1 stagger-card tilt-card"
           >
             <div class="relative h-48">
-              <img
-                src="./res/novaprolanding.png"
-                alt="NovaPro Inventory System"
-                class="w-full h-full object-cover"
-              />
               <div
-                class="absolute inset-0 bg-gradient-to-b from-transparent to-black/50"
-              ></div>
+                class="slideshow-container cursor-pointer"
+                data-project="novapro"
+              >
+                <img
+                  src="./res/novaprolanding.png"
+                  alt="NovaPro Inventory System"
+                  class="slide active w-full h-full object-cover"
+                />
+                <div
+                  class="absolute inset-0 bg-gradient-to-b from-transparent to-black/50"
+                ></div>
+              </div>
             </div>
             <div class="p-6">
               <h3 class="text-xl font-bold mb-2">NovaPro Inventory System</h3>
