--- a/index.html
+++ b/index.html
@@ -992,21 +992,18 @@
           <div
             class="group bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all transform hover:-translate-y-1 stagger-card tilt-card"
           >
-            <div class="h-48 bg-gradient-to-br from-indigo-500 to-violet-500">
-              <div class="project-icon-wrapper">
-                <svg
-                  class="w-16 h-16 text-white"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z"
+            <div class="relative h-48">
+              <div
+                class="slideshow-container cursor-pointer"
+                data-project="discord-bot"
+              >
+                <div class="bg-white h-48 flex items-center justify-center">
+                  <img
+                    src="./res/TriadBot.png"
+                    class="slide active h-full w-auto object-contain"
+                    alt="Discord Bot Interface"
                   />
-                </svg>
+                </div>
               </div>
             </div>
             <div class="p-6">
