--- a/index.html
+++ b/index.html
@@ -11,44 +11,132 @@
     <script src="./scripts/slideshow.js" defer></script>
   </head>
   <body class="bg-slate-50 text-slate-900 font-sans antialiased">
-    <!-- Floating Navigation -->
+    <script src="./scripts/theme.js" defer></script>
+    <!-- Header/Navigation -->
     <nav
-      class="fixed top-6 left-1/2 -translate-x-1/2 w-[90%] max-w-5xl backdrop-blur-md bg-white/70 rounded-2xl shadow-lg px-6 py-4 z-50"
+      class="fixed top-0 left-0 right-0 z-50 bg-white/80 dark:bg-gray-900/80 backdrop-blur-md shadow-lg transition-colors duration-200"
     >
-      <div class="flex justify-between items-center">
-        <a
-          href="#"
-          class="text-xl font-bold bg-gradient-to-r from-indigo-600 to-violet-600 text-transparent bg-clip-text"
-          >AK</a
-        >
-        <div class="hidden md:flex gap-8">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between h-16">
+          <div class="flex items-center">
+            <a
+              href="#"
+              class="text-xl font-bold bg-gradient-to-r from-indigo-600 to-violet-600 text-transparent bg-clip-text"
+              >AK</a
+            >
+          </div>
+
+          <!-- Desktop Navigation -->
+          <div class="hidden md:flex items-center space-x-8">
+            <a
+              href="#work"
+              class="text-gray-600 hover:text-indigo-600 dark:text-gray-300 dark:hover:text-indigo-400 transition-colors"
+              >Work</a
+            >
+            <a
+              href="#projects"
+              class="text-gray-600 hover:text-indigo-600 dark:text-gray-300 dark:hover:text-indigo-400 transition-colors"
+              >Projects</a
+            >
+            <a
+              href="#skills"
+              class="text-gray-600 hover:text-indigo-600 dark:text-gray-300 dark:hover:text-indigo-400 transition-colors"
+              >Skills</a
+            >
+            <a
+              href="#about"
+              class="text-gray-600 hover:text-indigo-600 dark:text-gray-300 dark:hover:text-indigo-400 transition-colors"
+              >About</a
+            >
+
+            <!-- Dark mode toggle -->
+            <button
+              id="theme-toggle"
+              class="p-2 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200"
+            >
+              <!-- Sun icon -->
+              <svg
+                id="theme-toggle-light-icon"
+                class="hidden w-5 h-5"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+                ></path>
+              </svg>
+              <!-- Moon icon -->
+              <svg
+                id="theme-toggle-dark-icon"
+                class="hidden w-5 h-5"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
+                ></path>
+              </svg>
+            </button>
+          </div>
+
+          <!-- Mobile menu button -->
+          <div class="flex items-center md:hidden">
+            <button
+              id="theme-toggle-mobile"
+              class="p-2 mr-2 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200"
+            >
+              <!-- Sun/Moon icons (copy from desktop version) -->
+            </button>
+            <button
+              id="mobile-menu-button"
+              class="inline-flex items-center justify-center p-2 rounded-md text-gray-600 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white focus:outline-none"
+            >
+              <svg
+                class="h-6 w-6"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  class="mobile-menu-icon"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Mobile menu -->
+      <div
+        id="mobile-menu"
+        class="hidden md:hidden bg-white dark:bg-gray-900 shadow-lg transition-all duration-200"
+      >
+        <div class="px-2 pt-2 pb-3 space-y-1">
           <a
             href="#work"
-            class="text-slate-600 hover:text-indigo-600 transition-colors"
+            class="block px-3 py-2 rounded-md text-gray-600 hover:text-indigo-600 dark:text-gray-300 dark:hover:text-indigo-400"
             >Work</a
           >
           <a
             href="#projects"
-            class="text-slate-600 hover:text-indigo-600 transition-colors"
+            class="block px-3 py-2 rounded-md text-gray-600 hover:text-indigo-600 dark:text-gray-300 dark:hover:text-indigo-400"
             >Projects</a
           >
           <a
             href="#skills"
-            class="text-slate-600 hover:text-indigo-600 transition-colors"
+            class="block px-3 py-2 rounded-md text-gray-600 hover:text-indigo-600 dark:text-gray-300 dark:hover:text-indigo-400"
             >Skills</a
           >
           <a
             href="#about"
-            class="text-slate-600 hover:text-indigo-600 transition-colors"
+            class="block px-3 py-2 rounded-md text-gray-600 hover:text-indigo-600 dark:text-gray-300 dark:hover:text-indigo-400"
             >About</a
           >
         </div>
-        <a
-          href="mailto:Andkolenda@hotmail.com"
-          class="hidden md:block px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition-colors"
-        >
-          Contact
-        </a>
       </div>
     </nav>
 
@@ -56,55 +144,58 @@
     <section
       class="min-h-screen flex items-center justify-center relative overflow-hidden parallax-section"
     >
-      <!-- Existing gradient background -->
+      <!-- Updated gradient background -->
       <div
-        class="absolute inset-0 bg-gradient-to-br from-indigo-50 to-violet-50"
+        class="absolute inset-0 hero-gradient bg-gradient-to-br from-indigo-50 to-violet-50 dark:from-gray-900 dark:to-gray-800"
       ></div>
 
-      <!-- Add particle network canvas -->
-      <canvas id="particle-network" class="absolute inset-0 z-0"></canvas>
+      <!-- Particle network with dark mode support -->
+      <canvas
+        id="particle-network"
+        class="absolute inset-0 z-0 opacity-75 dark:opacity-30"
+      ></canvas>
 
-      <!-- Animated shapes with adjusted z-index -->
+      <!-- Updated animated shapes for dark mode -->
       <div class="absolute inset-0 z-[1]">
         <div
-          class="absolute top-1/4 left-1/4 w-64 h-64 bg-indigo-300/20 rounded-full mix-blend-multiply filter blur-xl animate-blob"
+          class="absolute top-1/4 left-1/4 w-64 h-64 bg-indigo-300/20 dark:bg-indigo-500/10 rounded-full mix-blend-multiply dark:mix-blend-lighten filter blur-xl animate-blob"
         ></div>
         <div
-          class="absolute top-1/3 right-1/4 w-64 h-64 bg-violet-300/20 rounded-full mix-blend-multiply filter blur-xl animate-blob animation-delay-2000"
+          class="absolute top-1/3 right-1/4 w-64 h-64 bg-violet-300/20 dark:bg-violet-500/10 rounded-full mix-blend-multiply dark:mix-blend-lighten filter blur-xl animate-blob animation-delay-2000"
         ></div>
         <div
-          class="absolute bottom-1/4 left-1/3 w-64 h-64 bg-pink-300/20 rounded-full mix-blend-multiply filter blur-xl animate-blob animation-delay-4000"
+          class="absolute bottom-1/4 left-1/3 w-64 h-64 bg-pink-300/20 dark:bg-pink-500/10 rounded-full mix-blend-multiply dark:mix-blend-lighten filter blur-xl animate-blob animation-delay-4000"
         ></div>
       </div>
 
-      <!-- Main content with adjusted z-index -->
+      <!-- Updated content section with dark mode text -->
       <div class="relative z-[2] text-center px-4">
-        <div class="mb-8 relative inline-block float-element">
+        <div class="mb-8 relative inline-block float-element hover-lift">
           <div
             class="absolute inset-0 bg-gradient-to-r from-indigo-600 to-violet-600 rounded-full blur-lg opacity-75"
           ></div>
           <img
             src="./res/Headshot.jpeg"
             alt="Andrija Kolenda"
-            class="relative w-40 h-40 rounded-full object-cover border-4 border-white shadow-xl"
+            class="relative w-40 h-40 rounded-full object-cover border-4 border-white dark:border-gray-800 shadow-xl"
           />
         </div>
-        <h1 class="text-6xl font-bold mb-4 animated-gradient-text">
+        <h1 class="text-6xl font-bold mb-4 text-gray-900 dark:text-gray-100">
           Andrija Kolenda
         </h1>
-        <p class="text-xl text-slate-600 mb-8">
+        <p class="text-xl text-gray-800 dark:text-gray-300 mb-8">
           Software Developer & IT Specialist
         </p>
         <div class="flex gap-4 justify-center">
           <a
             href="#work"
-            class="px-6 py-3 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition-all transform hover:scale-105"
+            class="apple-button px-6 py-3 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition-all"
           >
             View My Work
           </a>
           <a
             href="#contact"
-            class="px-6 py-3 bg-white text-indigo-600 rounded-lg hover:bg-slate-50 transition-all transform hover:scale-105 shadow-md"
+            class="apple-button px-6 py-3 bg-white dark:bg-gray-800 text-indigo-600 dark:text-indigo-400 rounded-lg hover:bg-slate-50 dark:hover:bg-gray-700 transition-all shadow-md"
           >
             Get in Touch
           </a>
