Refactor slideshow image rendering; adjust layout and styles for better responsiveness

--- a/index.html
+++ b/index.html
@@ -903,27 +903,29 @@
           <div
             class="group bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all transform hover:-translate-y-1 stagger-card tilt-card"
           >
-            <div class="relative h-48">
+            <div class="relative h-48 bg-white">
               <div
                 class="slideshow-container cursor-pointer"
                 data-project="mru-chemistry"
               >
-                <img
-                  src="./res/mruchemistrywebsite1.png"
-                  class="slide active w-full h-48 object-cover"
-                />
-                <img
-                  src="./res/mruchemistrywebsite2.png"
-                  class="slide w-full h-48 object-cover"
-                />
-                <img
-                  src="./res/mruchemistrywebsite3.png"
-                  class="slide w-full h-48 object-cover"
-                />
-                <img
-                  src="./res/mruchemistrywebsite4.png"
-                  class="slide w-full h-48 object-cover"
-                />
+                <div class="bg-white h-48 flex items-center justify-center">
+                  <img
+                    src="./res/mruchemistrywebsite1.png"
+                    class="slide active h-full w-auto object-contain"
+                  />
+                  <img
+                    src="./res/mruchemistrywebsite2.png"
+                    class="slide h-full w-auto object-contain"
+                  />
+                  <img
+                    src="./res/mruchemistrywebsite3.png"
+                    class="slide h-full w-auto object-contain"
+                  />
+                  <img
+                    src="./res/mruchemistrywebsite4.png"
+                    class="slide h-full w-auto object-contain"
+                  />
+                </div>
                 <!-- Navigation dots -->
                 <div
                   class="absolute bottom-2 left-1/2 transform -translate-x-1/2 flex space-x-2 z-10"
@@ -1019,23 +1021,25 @@
           <div
             class="group bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all transform hover:-translate-y-1 stagger-card tilt-card"
           >
-            <div class="relative h-48">
+            <div class="relative h-48 bg-white">
               <div
                 class="slideshow-container cursor-pointer"
                 data-project="cookie-manager"
               >
-                <img
-                  src="./res/cookieOne.png"
-                  class="slide active w-full h-48 object-cover"
-                />
-                <img
-                  src="./res/cookieTwo.png"
-                  class="slide w-full h-48 object-cover"
-                />
-                <img
-                  src="./res/cookieThree.png"
-                  class="slide w-full h-48 object-cover"
-                />
+                <div class="bg-white h-48 flex items-center justify-center">
+                  <img
+                    src="./res/cookieOne.png"
+                    class="slide active h-full w-auto object-contain"
+                  />
+                  <img
+                    src="./res/cookieTwo.png"
+                    class="slide h-full w-auto object-contain"
+                  />
+                  <img
+                    src="./res/cookieThree.png"
+                    class="slide h-full w-auto object-contain"
+                  />
+                </div>
                 <!-- Navigation dots -->
                 <div
                   class="absolute bottom-2 left-1/2 transform -translate-x-1/2 flex space-x-2 z-10"
@@ -1128,19 +1132,18 @@
           <div
             class="group bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-all transform hover:-translate-y-1 stagger-card tilt-card"
           >
-            <div class="relative h-48">
+            <div class="relative h-48 bg-white">
               <div
                 class="slideshow-container cursor-pointer"
                 data-project="novapro"
               >
-                <img
-                  src="./res/novaprolanding.png"
-                  alt="NovaPro Inventory System"
-                  class="slide active w-full h-full object-cover"
-                />
-                <div
-                  class="absolute inset-0 bg-gradient-to-b from-transparent to-black/50"
-                ></div>
+                <div class="bg-white h-48 flex items-center justify-center">
+                  <img
+                    src="./res/novaprolanding.png"
+                    class="slide active h-full w-auto object-contain"
+                    alt="NovaPro Inventory System"
+                  />
+                </div>
               </div>
             </div>
             <div class="p-6">
