Enhance mobile menu functionality; toggle visibility classes on button click and link selection

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               class="inline-flex items-center justify-center p-2 rounded-md text-gray-600 hover:text-gray-900 dark:text-gray-300 dark:hover:text-white focus:outline-none"
             >
               <svg
-                class="h-6 w-6"
+                class="h-6 w-6 text-current"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke="currentColor"
